--- a/Code/index.html
+++ b/Code/index.html
@@ -11,7 +11,7 @@
     <header class="hero-section">
         <div class="container">
             <div class="logo">
-                <img src="brainlyLogo.png" alt="Brainly Logo"> </div>
+                <img src="./Images/brainlyLogo.png" alt="Brainly Logo"> </div>
             <nav>
                 <a href="#">ENTRAR</a>
                 <a href="#" class="cta-cadastre-se">CADASTRAR-SE</a>
@@ -26,7 +26,7 @@
                 <button><i class="fas fa-search"></i></button> </div>
         </div>
         <div class="hero-image">
-            <img src="brainlyIlustration.svg" alt="Ilustração Brainly"> </div>
+            <img src="./Images/brainlyIlustration.webp" alt="Ilustração Brainly"> </div>
         <div class="categories">
             <button class="category-btn"><span>&#8942;</span> Todas</button>
             <button class="category-btn">ENEM</button>
@@ -43,7 +43,7 @@
             <p>Crie uma conta agora para obter respostas verificadas de nossa comunidade de 300+ milhões de professores e alunos.</p>
 
             <button class="btn-google">
-                <img src="googleIcon.png" alt="Google Icon"> Inscrever-se no Google
+                <img src="./Images/googleIcon.png" alt="Google Icon"> Inscrever-se no Google
             </button>
             <button class="btn-primary">CADASTRAR-SE</button>
             <button class="btn-secondary">CADASTRAR-SE</button>
